# Matrix

./: CMakeLists.txt  README.md  main.cpp
include/: matrix.h
include/Matrix/: matrix.h
test/: CMakeLists.txt
test/src/: test1.cpp  test_associative_multiplication.cpp  test_double_multiplication.cpp  test_matrix.cpp  test_rectangle_multiplication.cpp  test_square_multiplication.cpp  test_time_multiplication.cpp  test_transpose_size.cpp  test_vector_multiplication.cpp
